<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.App.Title"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUserForm"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_user_form"
        app:icon="@android:drawable/ic_menu_edit"
        app:iconPadding="12dp"
        app:iconGravity="textStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProductForm"
        style="@style/Widget.App.Button.Primary"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_product_form"
        app:icon="@android:drawable/ic_menu_add"
        app:iconPadding="12dp"
        app:iconGravity="textStart"/>
</LinearLayout>
